--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html>
 
 <title>temperature </title>
+<style>
+    body {
+        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #bcc9a0);
+        ;
+        ;
+        display: flex;
+        color: rgb(211, 18, 18);
+        justify-content: center;
+        align-items: center;
 
-<body style="background-color: beige; font-size: 20px;">
+        min-height: 100vh;
+
+    }
+</style>
+
+<body style=" font-size: 20px;">
     <center>
+        <strong>
+            <h1
+                style="text-align: center; color: rgb(80, 204, 22); font-size: 30px; font-style: bold; margin-bottom: 20px;">
+                Temperature Converter Is Here </h1>
+        </strong>
         <fieldset style="width: 300px; height: 30vh; border-radius: 20px; background-color: rgb(245, 239, 230);">
-            <legend style="text-align: center; font-size: 30px; font-style: italic; margin-bottom: 20px;"> Temperature
-                Convertor</legend>
+            <strong>
+                <legend
+                    style="text-align: center; color: rgb(14, 18, 233); font-size: 25px; font-style: italic; margin-bottom: 20px;">
+                    Temperature
+                    Convertor</legend>
+            </strong>
             <form>
                 <input type="text" id="tempa" value="" placeholder="Enter Temperature here">
 
